--- a/main.css
+++ b/main.css
@@ -139,13 +139,10 @@ h6 {
     width: 100%;
     height: 90px;
 }
-.color-picker-white {
-    height: 45px;
-    background: linear-gradient(0deg,rgba(255,255,255,0),rgba(255,255,255,1));
-}
-.color-picker-black {
-    height: 45px;
-    background: linear-gradient(180deg,rgba(0,0,0,0),rgba(0,0,0,1));
+
+.color-picker-fg {
+    height: 90px;
+    background: linear-gradient(0deg,rgba(0,0,0,1)0%, rgba(255,255,255,0) 50%,rgba(255,255,255,1) 100%);
 }
 
 .progress {
