实现文件定义、开发图层和核心绘图程序

--- a/main.css
+++ b/main.css
@@ -17,6 +17,81 @@ h6 {
     width: 100%;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.pure-button {
+    box-shadow: 2px 2px 4px #ccc;
+}
+
+.btn-info {
+    background: rgb(66, 184, 221);
+    color: #fff;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+    text-align: center;
+}
+.modal-content {
+    margin-top: 6%;
+    display: inline-block;
+    width: 36%;
+    min-width: 360px;
+    background: white;
+    box-shadow: 4px 4px 8px #222;
+    border-radius: 6px;
+}
+.modal-title {
+    background: #222;
+    padding: 10px 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #ddd;
+    border-bottom: 3px solid #999;
+    border-radius: 6px 6px 0 0;
+}
+.modal-body {
+    padding: 40px 20px;
+    font-size: 14px;
+    text-align: left;
+}
+.modal-footer {
+    background: #ddd;
+    padding: 8px 20px;
+    text-align: right;
+    border-top: 2px solid #ccc;
+    border-radius: 0 0 6px 6px;
+}
+
+.modal-form .pure-g {
+    margin-bottom: 10px;
+    color: #666;
+}
+.modal-form .pure-g div:first-child {
+    padding-right: 10px;
+    text-align: right;
+}
+.modal-input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #aaa;
+}
+.modal-input:focus {
+    border-bottom: 1px solid #fa6800;
+}
+.modal-form div:first-child label {
+    font-size: 12px;
+    font-weight: bold;
+    color: #999;
+}
+
 .menu {
     border-bottom: 3px solid #555;
 }
@@ -28,6 +103,7 @@ h6 {
 .menu ul li {
     list-style: none;
     display: inline-block;
+    position: relative;
 }
 .menu ul li a {
     text-decoration: none;
@@ -39,6 +115,23 @@ h6 {
 .menu ul li a:hover {
     background-color: #444;
     color: #eee;
+}
+.menu ul li:hover ul {
+    display: block;
+}
+.menu ul li ul {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    background: #555;
+}
+.menu ul li ul li a {
+    padding: 10px 20px;
+    font-size: 12px;
+    width: 100px;
+}
+.menu ul li ul li.line {
+    border-bottom: 1px solid #777;
 }
 
 .toolbox {
@@ -67,17 +160,27 @@ h6 {
     float: left;
 }
 
-.toolbox a img, .canvas a img {
+.toolbox a {
     width: 30px;
     height: 30px;
 }
-
-.toolbox a, .canvas a {
-    display: inline-block;
+.canvas a {
+    width: 24px;
+    height: 24px;
+}
+.toolbox a img {
     width: 30px;
     height: 30px;
+}
+.canvas a img {
+    width: 24px;
+    height: 24px;
+}
+.toolbox a, .canvas a {
+    display: inline-block;
     padding: 5px;
     background-color: #777;
+    box-shadow: 1px 1px 2px #444;
     margin-bottom: 6px;
     border-radius: 4px;
     opacity: 50%;
@@ -232,15 +335,7 @@ h6 {
     margin-left: 10px;
 }
 
-.cube-row {
-    height: 15px;
-    margin-bottom: 1px;
-}
-
 .cube {
-    float: left;
-    width: 15px;
-    height: 15px;
+    display: inline-block;
     background-color: #fff;
-    margin-left: 1px;
 }
